...
                              left: 12,
                              right: 12 +
                                  40.0, // +40 to give it mo9re width as per the design
                              bottom: 10,
                            ),
                            child: Text(
                              "Connect",
                              style: GoogleFonts.workSans(
                                decoration: TextDecoration.none,
                                color: CFColors.midnight,
                                fontWeight: FontWeight.w400,
                                fontSize: 14,
                              ),
...
                              top: 10,
                              left: 12,
                              right: 12,
                              bottom: 10,
                            ),
                            child: Text(
                              "Details",
                              style: GoogleFonts.workSans(
                                decoration: TextDecoration.none,
                                color: CFColors.midnight,
                                fontWeight: FontWeight.w400,
                                fontSize: 14,
                              ),
...
                                top: 10,
                                left: 12,
                                right: 12,
                                bottom: 10,
                              ),
                              child: Text(
                                "Edit",
                                style: GoogleFonts.workSans(
                                  decoration: TextDecoration.none,
                                  color: CFColors.midnight,
                                  fontWeight: FontWeight.w400,
                                  fontSize: 14,
                                ),
...
                                top: 10,
                                left: 12,
                                right: 12,
                                bottom: 10,
                              ),
                              child: Text(
                                "Delete",
                                style: GoogleFonts.workSans(
                                  decoration: TextDecoration.none,
                                  color: CFColors.midnight,
                                  fontWeight: FontWeight.w400,
                                  fontSize: 14,
                                ),
...
