...

    if (canConnect) {
      OverlayNotification.showSuccess(
          context, "Connection test passed!", Duration(seconds: 2));
    } else {
      OverlayNotification.showError(
          context, "Connection failed!", Duration(seconds: 2));
    }
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
...
                setState(() {
                  _useSSL = newValue;
                });
              },
            ),
            Text(
              "Use SSL",
              style: GoogleFonts.workSans(
                color: CFColors.dusk,
                fontWeight: FontWeight.w400,
                fontSize: 14,
              ),
            )
...
                  width: 16,
                ),
                Expanded(
                  child: SizedBox(
                    height: SizingUtilities.standardButtonHeight,
                    child: GradientButton(
                      key: Key("couldNotConnectOnSaveConfirmSaveButtonKey"),
                      child: FittedBox(
                        child: Text(
                          "SAVE",
                          style: CFTextStyles.button,
                        ),
                      ),
...
