final Map<int, String> monthMapShort = {
  1: 'Jan',
  2: 'Feb',
  3: 'Mar',
  4: 'Apr',
  5: 'May',
  6: 'Jun',
  7: 'Jul',
  8: 'Aug',
  9: 'Sep',
  10: 'Oct',
  11: 'Nov',
  12: 'Dec',
};

final Map<String, String> currencyMap = {
  'AUD': 'A\$',
  'CAD': 'CA\$',
  'CHF': 'CHF ',
  'CNY': 'CN¥',
  'EUR': '€',
  'GBP': '£',
  'HKD': 'HK\$',
  'INR': '₹',
  'JPY': '¥',
  'KRW': '₩',
  'PHP': 'PHP ',
  'SGD': 'SGD ',
  'TRY': 'TRY ',
  'USD': '\$',
  'RUB': '₽',
  'IDR': 'Rp',
  'VND': '₫',
  'MYR': 'RM',
  'THB': '฿',
  'XAU': 'GOLD '
};
