...
                      'Copy address to clipboard',
                      style: TextStyle(color: Colors.cyanAccent),
                    ),
                    onTap: () {
                      Clipboard.setData(new ClipboardData(text: snapshot.data));
                      Toast.show(
                        'Address copied to clipboard',
                        context,
                        duration: Toast.LENGTH_LONG,
                        gravity: Toast.BOTTOM,
                      );
                    },
                  );
...
